修改文件结构

--- a/JavaBlog/pom.xml
+++ b/JavaBlog/pom.xml
@@ -132,5 +132,26 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.31</version>
         </dependency>
+
+        <!-- struts2 -->
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-core</artifactId>
+            <version>2.3.16</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.ow2.util.bundles</groupId>
+            <artifactId>javassist-3.14.0-GA</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <!-- spring && struts2 -->
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-spring-plugin</artifactId>
+            <version>2.3.16.3</version>
+        </dependency>
+
     </dependencies>
 </project>
