创建图书管理系统项目,创建数据库模型

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ StrutsTest/lib/*
 StrutsTest/out/*
 HQLTest/lib/*
 HQLTest/target/*
+BookManageSystem/lib/*
+BookManageSystem/out/*
+BookManageSystem/target/*
