--- a/BookManageSystem/pom.xml
+++ b/BookManageSystem/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.linuxgroup</groupId>
-    <artifactId>HomeSchoolServer</artifactId>
+    <groupId>com.huihui</groupId>
+    <artifactId>BookManageSystem</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -17,19 +17,47 @@
     </build>
 
     <dependencies>
-        <!--&lt;!&ndash; log4j &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>log4j</groupId>-->
-            <!--<artifactId>log4j</artifactId>-->
-            <!--<version>1.2.17</version>-->
-        <!--</dependency>-->
+        <!-- json-lib -->
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
 
-        <!--&lt;!&ndash; servlet &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>javax.servlet</groupId>-->
-            <!--<artifactId>servlet-api</artifactId>-->
-            <!--<version>2.5</version>-->
-        <!--</dependency>-->
+        <!-- log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+        <!-- stl -->
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+        <!-- servlet -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+
+        <!-- spring mvc 返回 json -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
 
         <!-- spring mvc -->
         <dependency>
@@ -126,18 +154,36 @@
             <version>4.0.5.RELEASE</version>
         </dependency>
 
-        <!--&lt;!&ndash; struts2 &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.struts</groupId>-->
-            <!--<artifactId>struts2-core</artifactId>-->
-            <!--<version>2.3.16</version>-->
-        <!--</dependency>-->
 
-        <!--<dependency>-->
-            <!--<groupId>org.ow2.util.bundles</groupId>-->
-            <!--<artifactId>javassist-3.14.0-GA</artifactId>-->
-            <!--<version>1.0.0</version>-->
-        <!--</dependency>-->
+        <!-- json-lib -->
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+        <!--&lt;!&ndash; &ndash;&gt;-->
+
+        <!-- struts2 -->
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-core</artifactId>
+            <version>2.3.16</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.ow2.util.bundles</groupId>
+            <artifactId>javassist-3.14.0-GA</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <!-- struts2 json plugin -->
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-core</artifactId>
+            <version>2.3.16.3</version>
+        </dependency>
+
 
         <!-- Hibernate -->
         <dependency>
@@ -146,12 +192,12 @@
             <version>4.3.5.Final</version>
         </dependency>
 
-        <!--&lt;!&ndash; spring && struts2 &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.struts</groupId>-->
-            <!--<artifactId>struts2-spring-plugin</artifactId>-->
-            <!--<version>2.3.16.3</version>-->
-        <!--</dependency>-->
+        <!-- spring && struts2 -->
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-spring-plugin</artifactId>
+            <version>2.3.16.3</version>
+        </dependency>
 
         <!-- c3p0 -->
         <dependency>
@@ -166,6 +212,22 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.31</version>
         </dependency>
+
+        <!-- junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.7</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--commons-logging-->
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
 
     </dependencies>
 </project>
